@@ -1,3 +1,4 @@
+* #6036: Add separator after old chat history (morgs)
 * #6298: Implement 1-1 private chat with non Sugar Jabber clients (morgs)
 
 40
